Add authorization roles for users and for endpoints
